package TuEvento.Backend.dto.requests;
import lombok.Data;

@Data
public class ForgotPasswordDto {
    private String email;
}
